--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="https://img.icons8.com/?size=100&id=21RZGSq7l9zF&format=png&color=000000" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Urutan Aritmatika</title>
 </head>
