--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="https://img.icons8.com/?size=100&id=21RZGSq7l9zF&format=png&color=000000" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Urutan Aritmatika</title>
+  <title>Arithmetic Sequence</title>
   <link rel="preload" href="https://img.freepik.com/free-photo/stationery-with-apple-calculator-blackboard_23-2148199923.jpg" as="image">
 </head>
 
